# imgsys

./: .pre-commit-config.yaml  README.md  pyproject.toml
configs/: dataset.yaml  fusion.yaml
docs/: schema_collection.json  schema_image.json
imgsys/: cli.py  exif_utils.py  ids.py  paths.py  scanner.py  schema.py  validate.py
tests/: test_ids.py  test_schema.py
